--- a/src/AgileTimer.Client/AgileTimer.Client.csproj
+++ b/src/AgileTimer.Client/AgileTimer.Client.csproj
@@ -12,6 +12,10 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.AspNetCore.SignalR.Client" Version="3.0.0-preview3-19153-02" />
+  </ItemGroup>
+
+  <ItemGroup>
     <Compile Update="BlackScreen.xaml.cs">
       <DependentUpon>BlackScreen.xaml</DependentUpon>
     </Compile>
